# Survey_auto_classification

./: .gitignore  README.md  main.py  pyproject.toml
survey_tag_pipeline/: __init__.py  cli.py  cluster_packages.py  clustering.py  config.py  embeddings.py  io_utils.py  llm.py  phase1.py  phase2.py  phase3.py  preprocess.py
